sprint_7/increment_17: Add swagger docs
